Interlingua website localization Translated by Carmelo Serraino

--- a/ia/contact.html
+++ b/ia/contact.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Contacto e supporto - OmegaT</title>
+  <title>Contactos e supporto - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/contact">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Contacto e supporto - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Contactos e supporto - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/contact" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Contacto e supporto",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Contactos e supporto",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,84 +167,58 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-contact"><h1>Contacto e supporto</h1></div>
+    <div class="jumbotron jumbo-page titles-contact"><h1>Contactos e supporto</h1></div>
         
     <div class="container">
-		
-<h2>Contacto e supporto</h2>
+  <h3>Gruppo del usatores</h3>
+  <p>OmegaT ha un Gruppo del usatores multo active,&nbsp;supportante e multilingual <a href="http://groups.yahoo.com/group/omegat">ci</a>, le usatores es fortemente incoragiate a adherer a illo. Le Gruppo del usator alsi servi como puncto principal de contacto pro usatores e equipa del projecto.</p>
+  <br/>
+  <h3>Listas de posta electronic</h3>
+  <p>OmegaT ha alsi le sequente listas de posta electronic e revisores, que es hospite sur Sourceforge:</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a>
+        </td>
+        <td>Le lista del disveloppatores de OmegaT. Iste lista es pro le discussion plus technic re characteristicas e disveloppamento, e es designate pro le disveloppatores de OmegaT e de altere partes interessate.</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a>
+        </td>
+        <td>Iste lista de posta electronic es pro le localisatores de OmegaT.</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Systema de revision</h3>
+  <p>Le defectos, le requestas de functionalitates e le problemas re le documentation es tractate sur Sourceforge con le sequente systemas de revision. Per favor non usar iste systemas de revision sin haber antea levate le problema in le gruppo del usatores o in le listas de posta electronic.</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/bugs/">Systema de revision del problemas/defectos</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/feature-requests/">Systema de revision del requestas de nove functionalitates</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/documentation/">Systema de revision del documentation</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Administration</h3>
 
-<h3>Gruppo del usatores</h3>
-
-<p>OmegaT ha un Gruppo del usator multo active, supportante e multilingual <a href="http://groups.yahoo.com/group/OmegaT/">ci</a>, al qual le usatores son fortemente incitate a adherer. Le Gruppo del usatores alsi servi como le principal puncto de contacto inter usatores e equipa del projecto.</p><br/>
-
-<h3>Listas de posta electronic</h3>
-
-<p>OmegaT ha alsi le sequente listas de posta electronic e revisores, que es hospite sur Sourceforge:</p>
-		
-<table>
-
-		<tbody>
-
-    <tr>
-
-      <td><a href="http://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a></td>
-
-      <td>Le lista del disveloppatores de OmegaT. Iste lista es pro le discussion plus technic re characteristicas e disveloppamento, e es designate pro disveloppatores de OmegaT e altere partes interessate.</td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a></td>
-
-      <td>Iste lista de posta electronic es pro le localisatores de OmegaT.</td>
-
-    </tr>
-  
-  </tbody>
-
-</table>
-
-<br/>
-
-<h3>Systema de revision</h3>
-
-<p>Le defectos, le demandas de characteristicas  e le questiones re le documentation es tractate sur Sourceforge con le systemas de revision sequente. Per favor non usar iste systemas de revision ante que in prime loco ha levate le question sur le gruppo del usatores o sur le listas de posta electronic.</p>
-
-<table>
-
-		<tbody>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520347&amp;group_id=68187&amp;func=browse">Systema de revision del questiones/defectos</a></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520347&amp;group_id=68187&amp;func=browse">Systema de revision del demandas de nove characteristica</a></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520347&amp;group_id=68187&amp;func=browse">Systema de revision del documentation</a></td>
-
-    </tr>
-
-  </tbody>
-
-</table>
-
-<br/>
-
-<h3>Administration</h3>
-		
-<p>Per favor continge le <a href="mailto:info@omegat.org">Coordinator del projecto OmegaT</a> re omne le questiones de administration.</p>
+  <p>Per favor continge le <a href="mailto:info@omegat.org">Gestor del projecto OmegaT</a> re ulle puncto non coperite supra.<br/> Per favor continge le <a href="mailto:webmaster@omegat.org">webmaster</a> pro ulle puncto reguardante specificamente le sito web.</p>
 
 </div>
-
 
 
 
@@ -255,7 +229,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -272,22 +246,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
