--- a/ia/sponsorship.html
+++ b/ia/sponsorship.html
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/sponsorship">
 
@@ -43,9 +43,9 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Financiamento - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/sponsorship" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -56,7 +56,7 @@
     "name": "",
     "url": "http://omegat.org/ia",
     "headline": "Financiamento",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -170,29 +170,65 @@
     <div class="jumbotron jumbo-page titles-sponsorship"><h1>Financiamento</h1></div>
         
     <div class="container">
-		
-<h2>Financiamento</h2>
-
-<p>Le grande majoritate de  labor sur le projecto OmegaT esseva realisate sur base voluntari. Certe functiones del programma comocunque esseva commissionate per sponsores commercial que ha redonate le characteristicas al communitate. In iste data, le sponsores son:</p>
-
-
-<p><a href="http://www.balabit.com/">Balabit</a></p>
-<p><a href="http://www.cjtranslations.com/">CJ Translations</a></p>
-<p><a href="http://www.commodity12.eu/">Commodity12</a></p>
-<p><a href="http://www.diptik.fr"/>Diptik</a></p>
-<p><a href="http://www.doublet.jp/">Doublet KK</a></p>
-<p><a href="http://www.e-lexica.com/">e-lexica</a></p>
-<p><a href="http://www.ill.eu/">Instituto Laue-Langevin</a></p>
-<p><a href="http://www.invantive.com">Invantive</a></p>
-<p><a href="http://www.portavita.eu/">Portavita</a></p>
-<p><a href="http://www.marcprior.de/">Marc Prior</a></p>
-<p><a href="http://www.qabiria.com/">Qabiria</a></p>
-<p><a href="http://www.velior.ru/en">Velior</a></p>
-<p><a href="http://www.welocalize.com/">weLocalize</a></p>
-
-		</div>
-
-
+  <h2>Financiamento</h2>
+  <p>Le grande majoritate de  labor sur le projecto OmegaT esseva completate sur base voluntari. Certe functiones del programma comocunque esseva commissionate per sponsores commercial que ha redonate le characteristicas al communitate. In iste data, iste sponsores es:</p>
+  <ul>
+    <li>
+      <a href="http://www.balabit.com/">Balabit</a>
+    </li>
+    <li>
+      <a href="http://www.capstan.be/">cApStAn</a>
+    </li>
+    <li>
+      <a href="http://www.cjtranslations.com/">Traductiones CJ</a>
+    </li>
+    <li>
+      <a href="http://www.commodity12.eu/">Commodity12</a>
+    </li>
+    <li>
+      <a href="http://www.diptik.fr/">Diptik</a>
+    </li>
+    <li>
+      <a href="http://www.doublet.jp/">Doublet KK</a>
+    </li>
+    <li>
+      <a href="http://www.e-lexica.com/">e-lexica</a>
+    </li>
+    <li>
+      <a href="http://www.genua.de/">Genua</a>
+    </li>
+    <li>
+      <a href="http://www.tradumatica.net/">Grup de Recerca Tradumàtica</a>
+    </li>
+    <li>
+      <a href="http://www.ill.eu/">Instituto Laue-Langevin</a>
+    </li>
+    <li>
+      <a href="http://www.invantive.com">Invantive</a>
+    </li>
+    <li>
+      <a href="http://www.japanese-translations.co.uk/">Julian Rippon</a>
+    </li>
+    <li>
+      <a href="http://kilgray.com/">Kilgray</a>
+    </li>
+    <li>
+      <a href="http://www.portavita.eu/">Portavita</a>
+    </li>
+    <li>
+      <a href="http://www.marcprior.de/">Marc Prior</a>
+    </li>
+    <li>
+      <a href="http://www.qabiria.com/">Qabiria</a>
+    </li>
+    <li>
+      <a href="http://www.velior.ru/en">Velior</a>
+    </li>
+    <li>
+      <a href="http://www.welocalize.com/">weLocalize</a>
+    </li>
+  </ul>
+</div>
 
 
 
@@ -203,7 +239,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -220,22 +256,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
