--- a/ia/howtos/google_translate.html
+++ b/ia/howtos/google_translate.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Using Google Translate in OmegaT - OmegaT</title>
+  <title>Guida - Usar Google Translate in OmegaT - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/howtos/google_translate">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Using Google Translate in OmegaT - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - Usar Google Translate in OmegaT - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/howtos/google_translate" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Howto - Using Google Translate in OmegaT",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - Usar Google Translate in OmegaT",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,74 +167,69 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-google_translate"><h1>Howto - Using Google Translate in OmegaT</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-google_translate"><h1>Guida - Usar Google Translate in OmegaT</h1></div>
         
     <div class="container">
-
-<h2>Guida de OmegaT: <br/>Usar Google Translate in OmegaT</h2>
-
-<p>Ultra al pagina TTT ubi le usatores pote simplemente collar le texto pro le traduction, Google Translate provide anque un interfacie (API) que pote esser usate per le applicationes CAT, pro acceder le servicio. A mesura que de  decembre 2011, Google ha requirite le pagamento ab usatores pro uso de iste servicio. Iste Guida describe como configurar le function in OmegaT.</p>
-
-<p>1. Si tu jam non ha uno, aperi un conto con google.com.</p>
-
-<p>2. <a href="http://code.google.com/apis/language/translate/v2/pricing.html">Seque iste ligamine pro referer te a Google</a> pro le clave API v2 de Google Translate. Face te secur que tu ha commode le detalios de tu carta de credito. Google generara tu clave API, un linea con approximativemente  39 characteres.</p>
-
-<p>3. Assigna le clave al procedura de lanceamento de OmegaT como seque, dependente sur si tu es usante Windows, Mac, tu lancea OmegaT ab le linea de commando o per medio de un script:</p>
-
-<p><b>Usatores de Windows: </b></p>
-
-<p>3.1. Locar le file de configuration OmegaT.l4J.ini (le ubication de arrangiamento initial es C:\Program Files (x86)\OmegaT).</p>
-<p>3.2. Pro rediger iste file, tu pote haber necessitate del modo Administrator, o de mover lo temporaneemente a un differente ubication sur tu disco dur.</p>
-<p>3.3. Aperi OmegaT.l4J.ini in un editor de texto simple</p>
-<p>3.4. Adde le linea sequente al texto in le file:</p>
-<p>-Dgoogle.api.key=XXXXXXXX </p>
-<p>(ubi &quot;XXXXXXXX&quot; es le clave API fornite per Google).</p>
-<p>3.5. Salva OmegaT.l4J.ini (e si necesse, move lo al reverso al plica OmegaT).</p>
-
-<p><b>Usatores de Mac:</b></p>
-
-<p>3.6 Clicca con le dextero sur OmegaT.app e selige &quot;Show Package Contents&quot;.</p>
-<p>3.7 Clicca con le dextero sur le file Info.plist e selige tu editor ideal pro aperir le file.</p>
-<p>3.8. Trova le lineas:</p>
-<p>&lt;key&gt;apple.awt.graphics.UseQuartz&lt;/key&gt;</p>
-<p>&lt;string&gt;true&lt;/string&gt;</p>
-<p>e immediatemente post los, adde le lineas:</p>
-<p>&lt;key&gt;google.api.key&lt;/key&gt;</p>
-<p>&lt;string&gt;XXXXXXXX&lt;/string&gt;</p>
-<p>where &quot;XXXXXXXX&quot; is your Google Translate API key.</p>
-<p>3.9 Salva Info.plist.</p>
-
-<p><b>Usatores de Linux:</b></p>
-
-<p>3.10 Face te secur que tu ha le lanceator Kaptain installate (<a href="./linux.html">refere te si necessari al Guida Linux)</a>, deinde scribe le clave de Google Translate API in le pertinente campo sur le etiquetta Connexivitate?????.</p>
-
-<p><b>Usatores que lancea OmegaT per le linea de commando o per un script:</b></p>
-
-<p>3.11 Adde le argumento sequente al commando de lanceamento:</p>
-
-<p>-Dgoogle.api.key=XXXXXXXX</p>
-
-<p>where &quot;XXXXXXXX&quot; is your Google Translate API key.</p>
-
-<p>Le commando basic de lanceamento con le Google Translate API in consequentia essera:</p>
-
-<p>java -jar -Dgoogle.api.key=XXXXXXXX OmegaT.jar</p>
-
-<p>4. Configuration in OmegaT</p>
-<p>4.1. Lancea OmegaT</p>
-<p>4.2. Selige Optiones &gt; Traduction Automatic</p>
-<p>4.3. Marca Google Translate v2 (lassante non marcate le altere optiones)</p>
-
-<p>5. Nota:</p>
-
-<p>5.1 Le traductor automatic Google Machine Translation es un servicio pagate (US$20.00 per million de characteres). Tu pote controlar le uso quotidian ab tu conto Google. In le menu superior:</p>
-<p>More &gt; Even More &gt; Innovation/Code &gt; APIs Console &gt; Service/Translate API</p>
-
-
-<p>Copyright Milan Hubacek and Marc Prior 2011</p>
-
+  <p>Ultra al pagina web ubi le usatores pote simplemente collar le texto pro le traduction, Google Translate provide anque un interfacie (API) que pote ser usate per le applicationes CAT, pro acceder le servicio. Pois que de decembre 2011, Google ha requirite le pagamento ab le usatores pro le uso de iste servicio. Iste Guida describe como configurar le function in OmegaT.</p>
+  <p>1. Si tu jam non ha uno, aperi un conto con google.com.</p>
+  <p>2. <a href="http://code.google.com/apis/language/translate/v2/pricing.html">Seque iste ligamine pro referer te a Google</a> pro le clave API v2 de Google Translate. Face te secur que tu ha commode le detalios de tu carta de credito. Google generara tu clave API, un linea con approximativemente  39 characteres.</p>
+  <p>3. Assigna le clave al procedura de lanceamento de OmegaT como seque, dependente si tu usa Windows, Mac, o tu lancea OmegaT ab le linea de commando o per medio de un script:</p>
+  <p>
+    <b>Usatores de Windows: </b>
+  </p>
+  <p>3.1. Locar le file de configuration OmegaT.l4J.ini (le ubication de arrangiamento initial es C:\Program Files (x86)\OmegaT).</p>
+  <p>3.2. Pro rediger iste file, tu pote haber necessitate del modo Administrator, o de mover lo temporaneemente a un differente ubication sur tu disco dur.</p>
+  <p>3.3. Aperi OmegaT.l4J.ini in un editor de texto simple</p>
+  <p>3.4. Trova le rigas sequente;</p>
+  <pre>
+# Google Translate v2 API key
+#-Dgoogle.api.key=xxxxx
+</pre>
+  <p>E remove "#" al initio del riga -Dgoogle.api.key.</p>
+  <pre>
+# Google Translate v2 API key
+-Dgoogle.api.key=xxxxx
+</pre>
+  <p>(ubi "xxxxx" es le clave API fornite per Google).</p>
+  <p>3.5. Salva OmegaT.l4J.ini (e si necesse, move lo al reverso al plica OmegaT).</p>
+  <p>
+    <b>Usatores de Mac:</b>
+  </p>
+  <p>3.6. Clicca con le dextero sur OmegaT.app e selige "Show Package Contents".</p>
+  <p>3.7. Trova le file OmegaT.app/Contents/MacOS/OmegaT.sh e selige tu editor preferite pro aperir le file.</p>
+  <p>3.8. Trova le rigas sequente;
+<pre>
+# Google Translate v2 API key
+#GOOGLE_API_KEY="-Dgoogle.api.key=0123456789A0123456789B0123456789C0123456789D"
+</pre>
+E remove "#" al initio del riga. Ce riga defini GOOGLE_API_KEY.</p>
+  <pre>
+# Google Traducer v2 API clave
+GOOGLE_API_KEY="-Dgoogle.api.key=XXXXXXXX"
+</pre>
+  <p>ubi "XXXXXXXX" es tu clave API de Google Translate.</p>
+  <p>3.9 Salva OmegaT.sh.</p>
+  <p>
+    <b>Usatores de Linux:</b>
+  </p>
+  <p>3.10 Face te certe que tu ha le lanceator Kaptain installate (<a href="./linux.html">refere te si necessari al Guida de Linux)</a>, deinde scribe le clave API de Google Translate in le pertinente campo sur le scheda Connexiones.</p>
+  <p>
+    <b>Usatores que lancea OmegaT per le linea de commando o per un script:</b>
+  </p>
+  <p>3.11 Adde le argumento sequente al commando de lanceamento:</p>
+  <p>-Dgoogle.api.key=XXXXXXXX</p>
+  <p>ubi "XXXXXXXX" es tu clave API de Google Translate.</p>
+  <p>Le commando basic de lanceamento con le API de Google Translate in consequentia essera:</p>
+  <p>java -jar -Dgoogle.api.key=XXXXXXXX OmegaT.jar</p>
+  <p>4. Configuration in OmegaT</p>
+  <p>4.1. Lancea OmegaT</p>
+  <p>4.2. Selige Optiones &gt; Traduction Automatic</p>
+  <p>4.3. Marca Google Translate v2 (lassante non marcate le altere optiones)</p>
+  <p>5. Nota:</p>
+  <p>5.1 Le traductor automatic Google Machine Translation es un servicio pagate (US$20.00 per million de characteres). Tu pote controlar le uso quotidian ab tu conto Google. In le menu precedente:</p>
+  <p>More &gt; Even More &gt; Innovation/Code &gt; APIs Console &gt; Service/Translate API</p>
+  <p>Copyright Milan Hubacek and Marc Prior 2011</p>
 </div>
-
 
 
 
@@ -245,7 +240,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -262,22 +257,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
