--- a/ia/howtos/new_filter.html
+++ b/ia/howtos/new_filter.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Creating a new file filter - OmegaT</title>
+  <title>Guida - Creation un nove filtro de file - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/howtos/new_filter">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Creating a new file filter - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - Creation un nove filtro de file - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/howtos/new_filter" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Howto - Creating a new file filter",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - Creation un nove filtro de file",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,109 +167,65 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-new_filter"><h1>Howto - Creating a new file filter</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-new_filter"><h1>Guida - Creation un nove filtro de file</h1></div>
         
     <div class="container">
-
-<h2>Guida OmegaT: creation de un nove filtro de file</h2>
-
-<p>Iste Guida Explica como crear  un nove file filtro pro uso con OmegaT con description del creation de un rudimentari filtro file pro le formato TMX. Ben que on poterea parer singular voler traducer le files TMX (le ration consuete pro crear un filtro de file), le addition de un filtro TMX ha Le interessante effecto que illo habilita le files TMX in omne location e esser cercate ab intra omne projecto OmegaT usante le function &quot;Cerca files&quot;, alique non possibile in le compilation OmegaT standard.</p>
-
-<p>Pro compilar OmegaT a partir del codice primari, vide le <a href="compiling_from_source.html">Guida compilar OmegaT ab origine</a>.</p>
-
-<p>Selige un filtro existente pro un formato simile a cello pro le filtro nove. In iste exemplo, le filtro Adjuta &amp; Manual esseva seligite como un base.</p>
-
-<p>Loca le plica src/org/omegat/filters3/xml, e face un copia le sub plica /helpandmanual, nominante lo /tmx. In isse plica, renomina respectivemente le duo files HelpandManualDialect.java e HelpandManualFilter.java in TmxDialect.java e TmxFilter.java.</p>
-
-<p>Aperi le files TMXDialect.java e filtro TMX in un editor de texto. In ambe files, &quot;Cerca e replacia&quot; (con concordantia del majuscula/minuscula):</p>
-
-<p>&quot;helpandmanual&quot; con &quot;tmx&quot;<br/> &quot;HelpAndManual&quot; con &quot;TMX&quot;<br/> &quot;HELPANDMANUAL&quot; con &quot;TMX&quot;<br/> &quot;Help &amp; Manual&quot; con &quot;TMX&quot;<br/> &quot;Help&amp;Manual&quot; con &quot;TMX&quot;</p>
-
-<p>Identifica le tag(s) a nivello de paragrapho pro tu nove formato de file. Pro discoperir qual tags de paragrapho deberea esser, examina un file exemplo in un editor de texto. In TMX, le tag a nivello de paragrapho correspondente a un segmento es &quot;tu&quot;.</p>
-
-<p>In TMXDialect.java:</p>
-
-<p>Defini le tags de paragrapho, in iste caso per cambiar le linea:</p>
-
-<p>   defineParagraphTags(new String[] { &quot;caption&quot;, &quot;config-value&quot;, &quot;variable&quot;, &quot;para&quot;, &quot;title&quot;, &quot;keyword&quot;,
-                &quot;li&quot;, });</p>
-
-<p>to</p>
-
-<p>   defineParagraphTags(new String[] { &quot;tu&quot;, });</p>
-
-
-<p>Tu pote deler le linea:</p>
-
-<p>    defineShortcut(&quot;link&quot;, &quot;li&quot;);</p>
-
-<p>pois que illo es impertinente pro TMX, ben que le nove filtro functionara ancora si tu non face lo.</p>
-
-<p>Tu pote definir tags foras del torno. Istos defini sub segmentos que es presentate for le segmento in le qual illos es continite (le notas al pede del pagina es un bon exemplo). Pro facer isto pro le filtro TMX, insere le linea</p>
-
-<p>   defineOutOfTurnTags(new String[] { &quot;sub&quot;, });</p>
-
-<p>infra le linea</p>
-
-<p>   defineParagraphTags(new String[] { &quot;tu&quot;, });</p>
-
-<p>Le filtro comocunque operara ancora si tu non face isto.</p>
-
-<p>Infra iste lineas, tu pote alsi inserer le codice:</p>
-
-<p>   defineIntactTags(new String[]<br/>
-   {<br/>
-   &quot;header&quot;,<br/>
-   &quot;prop&quot;,<br/>
-   &quot;ph&quot;,<br/>
-   &quot;bpt&quot;,<br/>
-   &quot;ept&quot;,<br/>
-   &quot;it&quot;,<br/>
-   &quot;ut&quot;,<br/>
-   });</p>
-
-<p>Isto rendera le apparentia del files TMX plus nitide, ma de nove, il non es absolutemente essential.</p>
-
-<p>In TMXFilter.java:</p>
-
-<p>Cambia le extension del file, in iste caso a .tmx, per cambiar le linea:</p>
-
-<p>   public Instance[] getDefaultInstances() {<br/>
-   return new Instance[] { new Instance(&quot;*.xml&quot;, null, null), new Instance(&quot;*.hmxp&quot;, null, null), };</p>
-
-<p>in:</p>
-
-<p>   public Instance[] getDefaultInstances() {<br/>
-   return new Instance[] { new Instance(&quot;*.tmx&quot;, null, null), };</p>
-
-<p>In le plica /src/org/omegat, aperi le file Bundle.properties in un editor de texto e trova le lineas</p>
-
-<p>   # HelpAndManualFilter.java<br/>
-   HELPANDMANUAL_FILTER_NAME=Help &amp; Manual Files</p>
-
-<p>In sequito a iste lineas, insere le lineas</p>
-
-<p>   # TMXFilter.java<br/>
-   TMX_FILTER_NAME=TMX files</p>
-
-<p>(Si tu vole lancear OmegaT con un lingua de interfacie del usator altere que le anglese, face le identic cambio in le apposite file localisate Bundle.properties file.)</p>
-
-<p>In le plica principal del codice original, aperi le file manifest-template.mf in un editor de texto. Trova le lineas:</p>
-
-<p>   Name: org.omegat.filters3.xml.helpandmanual.HelpAndManualFilter<br/>
-   OmegaT-Plugin: filter</p>
-
-<p>In sequito a illos, insere le lineas</p>
-
-<p>   Name: org.omegat.filters3.xml.tmx.TMXFilter<br/>
-   OmegaT-Plugin: filter</p>
-
-<p>Compila como describite in le Guida Compilar OmegaT ex le origine. Lancea le version novemente compilate. controla in 'Optiones &gt; Filtros de file' que le nove filtro es presente. Pro verificar si illo opera, tu pote situar un file TMX in le plica /source de un projecto, o (plus utile) effectuar un Cerca Texto &gt; cerca operation del files sur le files TMX.</p>
-
-<p>Copyright Marc Prior 2008-2011</p>
-
+  <p>Iste Guida explica como crear un nove file filtro pro uso con OmegaT, per le description del creation de un file de un filtro rudimentari pro le formato TMX. Ben que il poterea parer singular voler traducer le files TMX (le ration consuete pro crear un filtro de file), le addition de un filtro TMX ha Le interessante effecto que illo habilita le files TMX in omne location e esser cercate ab intra omne projecto OmegaT usante le function "Cerca files", alco non possibile in le compilation standard de OmegaT.</p>
+  <p>Pro compilar OmegaT per le codice fonte, vide le <a href="compiling_from_source.html">Guida compilar OmegaT ab codice fonte</a>.</p>
+  <p>Selige un filtro existente con un formato simile a cello pro le filtro nove. In iste exemplo esseva seligite como base le filtro: Help &amp; Manual. </p>
+  <p>Trova le plica src/org/omegat/filters3/xml, e face un copia del sub plica /helpandmanual, renominante lo /tmx. In iste plica, renomina respectivemente le duo files HelpandManualDialect.java e HelpandManualFilter.java in TmxDialect.java e TmxFilter.java.</p>
+  <p>Aperi le files TMXDialect.java e TmxFilter.java in un editor de texto. In ambe files, "Cerca e replacia" (con concordantia del majusculas/minusculas):</p>
+  <p>"helpandmanual" con "tmx"<br/> "HelpAndManual" con "TMX"<br/> "HELPANDMANUAL" con "TMX"<br/> "Help &amp; Manual" con "TMX"<br/> "Help&amp;Manual" con "TMX"</p>
+  <p>Identifica le tag(s) a nivello de paragrapho pro tu nove formato de file. Pro discoperir lo que le tags de paragrapho deberea esser, examina un file exemplo in un editor de texto. In TMX, le tag a nivello de paragrapho correspondente a un segmento es "tu".</p>
+  <p>In TMXDialect.java:</p>
+  <p>Defini le tags de paragrapho, in iste caso per cambiar le linea:</p>
+  <p>&nbsp;&nbsp;&nbsp;defineParagraphTags(new String[] { "caption", "config-value", "variable", "para", "title", "keyword",
+                "li", });</p>
+  <p>to</p>
+  <p>&nbsp;&nbsp;&nbsp;defineParagraphTags(new String[] { "tu", });</p>
+  <p>Tu pote deler le linea:</p>
+  <p>  &nbsp;&nbsp;&nbsp;defineShortcut("link", "li");</p>
+  <p>pois que illo es irrelevante pro TMX, ben que le nove filtro functionara mesmo si tu non lo face.</p>
+  <p>Tu pote definir tags foras-torno. Istos defini sub-segmentos que es presentate foras del segmento in le qual illos es continite (le notas al pede del pagina es un bon exemplo). Pro facer isto pro le filtro TMX, insere le linea </p>
+  <p>&nbsp;&nbsp;&nbsp;defineOutOfTurnTags(new String[] { "sub", });</p>
+  <p>infra le linea</p>
+  <p>&nbsp;&nbsp;&nbsp;defineParagraphTags(new String[] { "tu", });</p>
+  <p>Le filtro comocunque operara ancora si tu non face isto.</p>
+  <p>Infra iste lineas, tu pote alsi inserer le codice:</p>
+  <p>&nbsp;&nbsp;&nbsp;defineIntactTags(new String[]<br/>
+&nbsp;&nbsp;&nbsp;{<br/>
+&nbsp;&nbsp;&nbsp;"header",<br/>
+&nbsp;&nbsp;&nbsp;"prop",<br/>
+&nbsp;&nbsp;&nbsp;"ph",<br/>
+&nbsp;&nbsp;&nbsp;"bpt",<br/>
+&nbsp;&nbsp;&nbsp;"ept",<br/>
+&nbsp;&nbsp;&nbsp;"it",<br/>
+&nbsp;&nbsp;&nbsp;"ut",<br/>
+&nbsp;&nbsp;&nbsp;});</p>
+  <p>Isto rendera le apparentia del files TMX plus nitide, ma de nove, il non es absolutemente essential.</p>
+  <p>In TMXFilter.java:</p>
+  <p>Cambia le extension del file, in iste caso a .tmx, per cambiar le linea:</p>
+  <p>&nbsp;&nbsp;&nbsp;public Instance[] getDefaultInstances() {<br/>
+&nbsp;&nbsp;&nbsp;return new Instance[] { new Instance("*.xml", null, null), new Instance("*.hmxp", null, null), };</p>
+  <p>in:</p>
+  <p>&nbsp;&nbsp;&nbsp;public Instance[] getDefaultInstances() {<br/>
+&nbsp;&nbsp;&nbsp;return new Instance[] { new Instance("*.tmx", null, null), };</p>
+  <p>In le plica /src/org/omegat, aperi le file Bundle.properties in un editor de texto e trova le lineas</p>
+  <p>&nbsp;&nbsp;&nbsp;# HelpAndManualFilter.java<br/>
+&nbsp;&nbsp;&nbsp;HELPANDMANUAL_FILTER_NAME=Help &amp; Manual Files</p>
+  <p>Sub iste lineas, insere le lineas </p>
+  <p>&nbsp;&nbsp;&nbsp;# TMXFilter.java<br/>
+&nbsp;&nbsp;&nbsp;TMX_FILTER_NAME=TMX files</p>
+  <p>(Si tu vole lancear OmegaT con un lingua de interfacie del usator altere que le anglese, face le identic cambio in le apposite file localisate Bundle.properties file.)</p>
+  <p>In le plica principal del codice original, aperi le file manifest-template.mf in un editor de texto. Trova le lineas:</p>
+  <p>&nbsp;&nbsp;&nbsp;Name: org.omegat.filters3.xml.helpandmanual.HelpAndManualFilter<br/>
+&nbsp;&nbsp;&nbsp;OmegaT-Plugin: filter</p>
+  <p>Sub illos, insere le lineas</p>
+  <p>&nbsp;&nbsp;&nbsp;Name: org.omegat.filters3.xml.tmx.TMXFilter<br/>
+&nbsp;&nbsp;&nbsp;OmegaT-Plugin: filter</p>
+  <p>Compila como describite in le Guida Compilar OmegaT ex le fonte. Lancea le version novemente compilate. Verifica in 'Optiones &gt; Filtros de file' que le nove filtro es presente. Pro verificar si illo opera ben, tu pote poner un file TMX in le plica /source de un projecto, o (plus utile) effectuar un Cerca Texto &gt; Cercar operation del files sur le files TMX.</p>
+  <p>Copyright Marc Prior 2008-2011</p>
 </div>
-
 
 
 
@@ -280,7 +236,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -297,22 +253,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
