--- a/ia/howtos/priorview.html
+++ b/ia/howtos/priorview.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - The "Priorview" preview utility - OmegaT</title>
+  <title>Guida - Le utilitate de visualisation preliminar Priorview - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/howtos/priorview">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - The "Priorview" preview utility - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - Le utilitate de visualisation preliminar Priorview - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/howtos/priorview" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Howto - The "Priorview" preview utility",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - Le utilitate de visualisation preliminar Priorview",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,15 +167,15 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-priorview"><h1>Howto - The "Priorview" preview utility</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-priorview"><h1>Guida - Le utilitate de visualisation preliminar Priorview</h1></div>
         
-    <div class="container">
+    
+<div class="container">
 
-<h2>Guida: Le utilitate de vista preliminar &quot;Priorview&quot;</h2>
 
 <h3>Scenario de fundo e principios</h3>
 
-<p>Priorview es un parve utilitate que provide un function vista preliminar pro uso con OmegaT. Pro le scenario de fundo e le principios, refere al <a href="./preview.html">Guida al vista preliminar</a>. Iste Guida describe le uso de Priorview pro <b>Windows e Linux</b>. Si tu es  usante Mac OSX, tu pote <a href="/resources/priorview_for_mac.zip">discarga un version de Priorview pro Mac hic</a>. Le version pro Mac OSX non es ancora documentate e le information in sequito  <b>non</b> referer se a illo.</p>
+<p>Priorview es un parve utilitate que provide un function vista preliminar pro uso con OmegaT. Pro le scenario de fundo e le principios, refere al <a href="preview.html">Guida al vista preliminar</a>. Iste Guida describe le uso de Priorview pro <b>Windows e Linux</b>. Si tu es  usante Mac OSX, tu pote <a href="/files/priorview_for_mac.zip">discarga un version de Priorview pro Mac hic</a>. Le version pro Mac OSX non es ancora documentate e le information in sequito  <b>non</b> referer se a illo.</p>
 
 <h3>Software necessari</h3>
 
@@ -187,9 +187,9 @@
 
 <li><a href="http://www.opera.com">Opera</a><br/>or</li>
 
-<li><a href="http://www.mozilla.org">Firefox</a> conjunctemente con le <a href="http://addons.mozilla.org/de/firefox/addon/reloadevery/">add-on pro Firefox &quot;ReloadEvery&quot;</a><br/> Installa in prime loco Firefox (si tu non ha lo jam installate), pois installa ReloadEvery.</li>
+<li><a href="http://www.mozilla.org">Firefox</a> conjunctemente con le <a href="http://addons.mozilla.org/de/firefox/addon/reloadevery/">add-on pro Firefox "ReloadEvery"</a><br/> Installa in prime loco Firefox (si tu non ha lo jam installate), pois installa ReloadEvery.</li>
 
-<li><i>(Discargar ex le ligamines fornite; le usatores de Linux pote preferer de installar lo ex lor depositos del distribution, ubi isto es possibile.)</i></li>
+<li><i>(Discargar ex le ligamines fornite; le usatores de Linux pote preferer de installar lo ex lor repositorios de distribution, ubi isto es possibile.)</i></li>
 
 </ul>
 
@@ -207,7 +207,7 @@
 
 <p>Quasi omne version actual de Tcl/Tk essera probabilemente commode, ma tu debe haber tote le duo Tcl (le interprete del script) e Tk (le componente graphic).</p>
 
-<p>4. <b><a href="/resources/priorview.zip">Priorview</a></b></p>
+<p>4. <b><a href="/files/priorview.zip">Priorview</a></b></p>
 
 <p>Pro installar Priorview, discassa simplemente le archivo zip in un location convenibile sur tu disco dur. Pro lancear  Priorview, aperi un prompte/terminal/consola de commando e inscribe:</p>
 
@@ -217,7 +217,7 @@
 
 <p>wish priorview.tcl</p>
 
-<p>Tu pote simplificar le lanceamento con le scriptura de un file script, id es un file de texto simple continente iste duo  lineas.</p>
+<p>Tu pote simplificar le lanceamento con le script de un file script, id es un file de texto simple continente iste duo  lineas.</p>
 
 <h3>Usar Priorview</h3>
 
@@ -235,7 +235,7 @@
 
 </ul>
 
-<p>Quando tu ha seligite tote istos, compare le button Start. Quando actuate, isto lancea tu lector del tela con un pagina simulacro instruente te a preparar le function de renovation automatic, quem tu deberea dunque facer, e pois pressar Ctrl+s, Ctrl+d in OmegaT pro lancear le renovation automatic del lector del tela.</p>
+<p>Quando tu ha seligite tote istos, compare le button Start. Quando actuate, isto lancea tu lector del tela con un pagina simulacro instruente te a preparar le function de renovation automatic, quem tu deberea dunque facer, e pois pulsar Ctrl+s, Ctrl+d in OmegaT pro lancear le renovation automatic del lector del tela.</p>
 
 <p>Durante que Priorview es functionante, tu pote:</p>
 
@@ -253,7 +253,7 @@
 
 <p>Le button Quita claude Priorview e dele alsi le files temporari que illo creava. (Altere methodos de clauder Priorview non delera le files temporari.)</p>
 
-<p><img src="../../images/preview_ss.png" alt="preview_ss.png"/></p>
+<p><img src="/img/preview_ss.png" alt="preview_ss.png"></img></p>
 
 <p><i>Un edition de pressa del Commission Europee (in formato .odt) in OmegaT e in sequito a illo le instantanee texto final monstrate in Opera. In basso a dextra: le utilitate Priorview. Le arrangiamento monstrate hic es justo pro gratia de exemplo; tu pote naturalmente arrangiar le fenestras como tu vole.</i></p>
 
@@ -262,7 +262,7 @@
 
 <p>Si le percurso allocation de priorview.tcl contine spatios, pone lo inter virgulettas, exempli gratia:</p>
 
-<p>cd &quot;C:\My Files\priorview&quot;</p>
+<p>cd "C:\My Files\priorview"</p>
 
 <p>Si Priorview falle al lanceamento:</p>
 
@@ -276,9 +276,9 @@
 
 <ul>
 
-<li>Que tu recordava de pressar Ctrl+s, Ctrl+d in OmegaT. usque/sinon tu face lo, il essera nulle cambios a discoperir/monstrar!</li>
+<li>Que tu recordava de pulsar Ctrl+s, Ctrl+d in OmegaT. usque/sinon tu face lo, il essera nulle cambios a discoperir/monstrar!</li>
 
-<li>que le utilitate de conversion de file es installate debitemente e es functionante. Tu pote probar isto con le commando pertinente in sequito sur le linea de commando (terminal/consola/prompte DOS). In cata caso, <i>file</i> es le nomine de un file .docx o .odt. Si tote es ben, un version .html del file essera producite:<br/> Pro Abiword:<br/> abiword --to=html <i>file</i><br/> Pro LibreOffice+Unoconv:br/&gt; unoconv -f html <i>file</i><br/></li>
+<li>que le utilitate de conversion de file es installate debitemente e es functionante. Tu pote probar isto con le commando pertinente in sequito sur le linea de commando (terminal/consola/prompte DOS). In cata caso, <i>file</i> es le nomine de un file .docx o .odt. Si tote es ben, un version .html del file essera producite:<br/> Pro Abiword:<br/> <kbd>abiword --to=html <i>file</i></kbd><br/> For LibreOffice+Unoconv:<br/> <kbd>unoconv -f html <i>file</i></kbd></li>
 
 <li>Que tu ha preparate le intervallo de auto refrescamento in le lector del tela.</li>
 
@@ -293,14 +293,13 @@
 
 
 
-
     <footer class="container-fluid text-center">
   <a href="#page" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"><!----></span>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -317,22 +316,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
