--- a/ia/howtos/prop12m.html
+++ b/ia/howtos/prop12m.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Propagation and one-to-many matching HowTo - OmegaT</title>
+  <title>Guida al propagation e al concordantia un a multe - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/howtos/prop12m">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Propagation and one-to-many matching HowTo - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida al propagation e al concordantia un a multe - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/howtos/prop12m" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Propagation and one-to-many matching HowTo",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida al propagation e al concordantia un a multe",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,63 +167,64 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-prop12m"><h1>Propagation and one-to-many matching HowTo</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-prop12m"><h1>Guida al propagation e al concordantia un a multe</h1></div>
         
     <div class="container">
 
-<h2>Guida al propagation e al concordantia un a multe</h2>
 
 <h3>Introduction</h3>
 
-<p>Iste Guida describe le functiones de OmegaT pro le propagation automatic del concordantia e le concordantia un a multe.</p>
+<p>Iste Guida describe le functiones de OmegaT pro le propagation automatic del concordantia e le concordantia uno a plures.</p>
 
 <h3>Propagation</h3>
 
-<p>Per arrangiamento initial, OmegaT uses automatic match propagation. Isto significa que si tosto que un segmento es rendite, le identic traduction es automaticamente inserite in omne le identic segmentos. Si un segmento esseva ja rendite e un segmento identic plus tarde sur in le texto es alora cambiate, le segmento anterior essera re portate in linea con le segmento cambiate. Segmentos le qual occurre plus que un vice es denominate in OmegaT como &quot;segmentos non unic&quot;.</p>
+<p>Per predisposition initial, OmegaT usa le propagation del concordantia. Isto significa que si tosto que un segmento es rendite, le identic traduction es automaticamente inserite in tote le identic segmentos. Si un segmento esseva ja rendite e un segmento, identic in le texto, plus tarde es cambiate, alora le segmento anterior essera re-alineate con le segmento cambiate. Le segmentos que occurre plus de un vice es denominate in OmegaT "segmentos non unic".</p>
 
-<p>Selectionar Vista &gt; marca le Segmentos Non Unic causa solmente le prime occurrentia de un segmento non unic esser monstrate in nigre, e secundo e ulterior occurrentias esser monstrate in gris. Isto es utile quando on debe verificar le traduction, depois que solmente le prime occurrentia del segmentos identic pote necessitar de esser verificate. Le usator pote in consequentia vider immediatemente que un segmento in gris, plus tosto que nigre, esseva jam verificate. (Si Optiones &gt; Vista &gt; &quot;includer le prime segmento non unic quando marca le segmentos non unic&quot; es seligite, omne segmentos non unic includente le  primo es marcate in iste maniera.)</p>
+<p>Selectionar Vista &gt; Marcar le Segmentos Non Unic causa solmente que le prime occurrentia de un segmento non unic essera monstrate in nigre, e le secunde e ulterior occurrentias essera monstrate in gris. Isto es utile quando on debe verificar le traduction, pois que pote ser necesse de verificar solo le prime occurrentia del segmentos identic. Le usator pote in consequentia vider immediatemente que un segmento in gris, plus tosto que nigre, esseva jam verificate.  (Si Optiones &gt; Preferentias &gt; Vista &gt; "Includer le prime segmento non unic quando es marcate le segmentos non unic" es seligite, omne segmentos non unic includente le primo es marcate in iste maniera).</p>
 
+<p>Tu pote disactivar le function de auto-propagation con Projecto &gt; Proprietates &gt; leva le marca al buxo  "Auto-propagation de Traductiones". Isto ha le effecto de render tote le instantias de segmentos non-unic traductiones alternative (vide plus avante "Concordantia uno-a-plures").</p>
 
-<h3>Concordantia un a multe (del version 2.5.0 in avante)</h3>
+<h3>Concordantia uno-a-plures</h3>
 
-<p>In le major parte del casos, le translator desirara render segmentos identic intra un projecto in le mesme maniera. Pro casos ubi duo o magis segmentos identic require traductiones distincte, OmegaT offere &quot;le concordantia un a multe&quot;.</p>
+<p>In le major parte del casos, le translator desirara render segmentos identic intra un projecto in le mesme maniera. Pro casos ubi duo o plus segmentos identic require traductiones differente, OmegaT offere "le concordantia uno-a-plures".</p>
 
-<p>Le function de concordantia un a multe de OmegaT in prime loco assume que segmentos identic debe esser rendite in le mesme maniera. Iste traduction es describite como le &quot;traduction base&quot;. Pro producer un traduction que es differente de le traduction base, clicca con dextera le mus intra le segmento e selige &quot;Crea traduction alternative&quot;. Ora iste segmento pote esser rendite como desiderate foras de altere occurrentias de illo automaticamente esser facite identic ad illo.</p>
+<p>Le function de concordantia uno-a-plures de OmegaT in prime loco assume que segmentos identic debe esser rendite in le mesme maniera. Iste traduction es describite como le "traduction base". Pro producer un traduction que es differente del traduction base, clicca con dextera le mus intra le segmento e selige "Crear un traduction alternative". Ora iste segmento pote esser rendite como desiderate, sin que le altere occurrentias de illo automaticamente sia rendite identic ad illo.</p>
 
-<p>Tu pote haber tante &quot;traductiones alternative&quot; quam tu vole de segmentos identic, ma il pote sol esser un traduction base (o necun del toto).</p>
+<p>Tu pote haber tante "traductiones alternative" quam tu vole de segmentos identic, ma tu pote haber solo un traduction base (o necuno, del toto).</p>
 
-<p>Pro render traduction base un traduction alternative, clicca con le dextero con le mouse e selige &quot;Usa como translation base&quot;. Isto rendera traduction base le traduction currente. Omne altere occurrentias del identic segmento que esseva previemente le &quot;traduction base&quot; ora essera alineate con iste traduction.</p>
+<p>Pro render como base un traduction alternative, clicca dextere le mus e selige "Usar como traduction base". Isto rendera traduction base le traduction currente. Omne altere occurrentias del identic segmento que esseva previemente le "traduction base" ora essera alineate con iste traduction.</p>
 
-<p>Pro remover le stato de &quot;traduction alternative&quot; de un singule segmento e reportar lo in linea con le &quot;traduction base&quot;, dele simplemente le contento del segmento. Isto ha le effecto de  cancellar le &quot;traduction alternative&quot; stato al mesme tempore; le traduction del segmento revertera dunque e &amp;&amp;&amp;&amp;&amp; of the default translation. Le contento de un segmento pote esser delite completemente o per medio del vias breve del claviero Ctrl+A &gt; Ctrl+X &gt; Enter, per click dextere con le mouse e le commando del menu Remove traduction, o simplemente usante le clave Dele (plure vices).</p>
+<p>Si tu ha jam traducite un instantia de un segmento non-unic e tu vole render "traduction base" un altere instantia, sin cambiar le traduction del instantia que tu ha ja traducite, tu debe in prime loco definir le character del segmento que tu ha ja traducite como "traduction alternative" per "Crear un traduction alternative".</p>
+
+<p>Pro remover le stato de "traduction alternative" de un singule segmento e reportar lo in linea con le "traduction base", dele simplemente le contento del segmento. Isto ha al mesme tempore le effecto de cancellar le stato de "traduction alternative"; le traduction del segmento revertera in consequentia a illo del traduction base. Le contento de un segmento pote esser delite completemente o per medio del vias breve del claviero Ctrl+A &gt; Ctrl+X &gt; Enter, per click dextere con le mouse e le commando del menu Remove traduction, o simplemente usante le clave Dele (plure vices).</p>
 
 
 <h3>Summario del commandos de propagation e concordantia un a multe</h3>
 
-<p><b>Necun</b> (comportamento base): omne le segmentos identic es automaticamente traducite al mesme maniera.</p>
+<p><b>Necun</b> (comportamento base): tote le segmentos identic es automaticamente traducite al mesme maniera.</p>
 
 <p><b>Marca segmentos non unic</b>: segmentos identic es marcate in gris (cambia le apparentia, ma non le comportamento).</p>
 
-<p><b>Crea traduction alternative</b>: rende le segmento unic. Le cambios a iste segmento non ha effecto sur le cetere segmentos, ni le cambios al &quot;traduction base&quot; affice lo.</p>
+<p><b>Crea traduction alternative</b>: rende le segmento unic. Le cambios a iste segmento non ha effecto sur le altere segmentos, ni lo affice le cambios al "traduction base".</p>
 
-<p><b>Remove traduction</b>: dele le contento del segmento, causante le insertion (quando es pressate Enter) del traduction base.</p>
+<p><b>Remove traduction</b>: dele le contento del segmento, causante le insertion (quando es pulsate Enter) del traduction base.</p>
 
-<p><b>Usa como traduction base</b>: rende le segmento active &quot;traduction base&quot; e ergo omne le previe segmentos &quot;traduction base&quot; a alineate con illo.</p>
+<p><b>Usa como traduction base</b>: rende le segmento active "traduction base" e ergo tote le previe segmentos "traduction base" alineate con illo.</p>
 
 
 
 <h3>Punctos a notar</h3>
 
-<p>Pro qualque typos de file, OmegaT usa le segmentos precedente e sequente pro confectionar segmentos unic. crear un &quot;traduction alternative&quot; dunque fide sur identic segmentos que ha distincte segmentos precedente e sequente. Ubi duo segmentos ha alsi identic segmentos precedente e sequente (per exemplo quando un pagina integre compare duo vices in le texto), illos non pote esser rendite in modo differente de le un le altere in OmegaT, i.e. il non es possibile render un de illos un &quot;traduction alternative&quot;.</p>
+<p>Pro alcun typos de file, OmegaT distingue inter segmentos identic per referimento a su duo segmentos precedente e successive. Le creation de un "traduction alternative" pro isto conta super segmentos identic que ha differente segmento precedente o sequente. Si duo segmentos ha alsi identic segmentos precedente e sequente (per exemplo quando un pagina integre compare duo vices in le texto), illos non pote esser rendite in modo differente le un del altere in OmegaT, id es il non es possibile render un de illos un "traduction alternative".</p>
 
-<p>Le &quot;segmento non unic&quot; concerne ambe le traductiones, base e alternative. Alora, segmentos que es marcate (con le typo de character gris) como non unic es marcate como non unic sin respecto si esseva create o non traductiones alternative.</p>
+<p>Le "segmento non unic" coperi ambe le traductiones, base e alternative. Alora, segmentos que es marcate (con le typo de character gris) como non unic es marcate como non unic sin respecto si esseva create o non traductiones alternative.</p>
 
-<p>Per arrangiamento base, Le commando (Ctrl+U) Vade al segmento non rendite sequente, salta al segmento non rendite sequente, saltante le traductiones  propagate in le processo. Si Optiones &gt; Comportamento del modifica &gt; &quot;Vade al sequente segmento non rendite arresta quando il ha is al minus un translation alternative&quot; es seligite totevia e al minus un traduction alternative de un segmento non unic esseva create, iste function tracta omne occurrentias de un segmento (si traductiones base o alternative) ut non rendite, i.e. non salta los.</p>
+<p>Per predisposition initial, Le commando (Ctrl+U), salta al segmento non rendite sequente, saltante le traductiones propagate in le processo. Si Optiones &gt; Comportamento del modifica &gt; "Vade al sequente segmento non rendite arresta quando il ha al minus un traduction alternative" es seligite totevia e al minus un traduction alternative de un segmento non unic esseva create, iste function tracta omne occurrentias de un segmento (sia traductiones base o alternative) como non rendite, id es non los salta.</p>
 
 
-<p>Copyright Marc Prior 2012</p>
+<p>Copyright Marc Prior 2014</p>
 
 </div>
-
 
 
 
@@ -234,7 +235,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -251,22 +252,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
