--- a/ia/howtos/spelling.html
+++ b/ia/howtos/spelling.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Spellchecking - OmegaT</title>
+  <title>Guida - Controlator orthographic - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/howtos/spelling">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Spellchecking - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - Controlator orthographic - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/howtos/spelling" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Howto - Spellchecking",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - Controlator orthographic",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,35 +167,26 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-spelling"><h1>Howto - Spellchecking</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-spelling"><h1>Guida - Controlator orthographic</h1></div>
         
     <div class="container">
 
-<h2>Guida OmegaT. Controlo orthographic</h2>
+<p>OmegaT ha un su proprie corrector orthographic immediate. Iste functionalitate usa le dictionarios orthographic de LibreOffice e OpenOffice.org. Le dictionarios es disponibile pro multe linguas.</p>
 
-<p>OmegaT ha un corrector orthographic integrate. Iste characteristica usa le dictionarios orthographic de LibreOffice e OpenOffice.org. Le dictionarios es disponibile pro multe linguas.</p>
+<h3>Installar un nove dictionario orthographic per OmegaT</h3>
 
-<h3>Installar un nove dictionario orthographic ex OmegaT</h3>
+<p>On pote installar le nove dictionarios orthographic per OmegaT in le fenestra de dialogo Optiones &gt; Preferences &gt; Spellchecker. In iste fenestra de dialogo, selige o crea un Plica del files dictionarios sur tu disco dur. Le dictionarios orthographic essera ubicate in iste plica. (Non confunder iste plica con le plica "dictionary" in le projectos de OmegaT.) Deinde selige le URL (adresse de un sito web) de un repositorio in Internet ex le qual discargar le dictionarios, e colla iste URL in le campo "URL de dictionarios in Internet". Un lista de URLs de repositorios is fornite plus avante. </p>
 
-<p>On pote installar le nove dictionarios orthographic ex OmegaT in le fenestra de dialogo Optiones &gt; Controlo orthographic. In iste fenestra de dialogo, selige o crea un plica /dictionarios sur tu disco dur. Le dictionarios orthographic essera ubicate in iste plica. (Non confunder iste plica con le plica &quot;dictionary&quot; in le projectos de OmegaT.) Deinde selige le URL (adresse de un sito TTT) de un deposito in interrete ex le qual discargar le dictionarios, e colla iste URL in le campo &quot;URL de dictionarios in interrete&quot;. Un lista de URLs de depositos is fornite in basso.</p>
-
-<p><a name="repositories">URLs de depositos de dictionarios orthographic:</a></p>
+<p><a name="repositories">URLs de repositorios de dictionarios orthographic:</a></p>
 
 <p>
+
 http://download.services.openoffice.org/files/contrib/dictionaries/<br/>
-http://openoffice.paris.fr/openoffice/contrib/dictionaries/<br/>
-http://openoffice.osuosl.org/contrib/dictionaries/<br/>
 http://ftp.uni-kl.de/pub/OpenOffice/contrib/dictionaries/<br/>
-http://ftp.uni-erlangen.de/mirrors/openoffice/contrib/dictionaries/<br/>
-http://ftp.fernuni-hagen.de/ftpdir/pub/mirrors/www.openoffice.org/contrib/dictionaries/<br/>
-http://ftp.plusline.de/OpenOffice/contrib/dictionaries/<br/>
 http://ftp.plusline.de/OpenOffice/contrib/dictionaries/<br/>
 http://ftp.nluug.nl/office/openoffice/contrib/dictionaries/<br/>
 http://ftp.nluug.nl/office/openoffice/contrib/dictionaries/<br/>
 http://linorg.usp.br/OpenOffice.org/contrib/dictionaries/<br/>
-http://ftp.uni-muenster.de/pub/mirrors/ftp.openoffice.org/contrib/dictionaries/<br/>
-http://ftp.uni-http://openoffice.mirrors.tds.net/pub/openoffice/contrib/dictionaries/<br/>
-http://openoffice.mirrors.tds.net/pub/openoffice/contrib/dictionaries/<br/>
 http://artfiles.org/openoffice.org/contrib/dictionaries/<br/>
 http://artfiles.org/openoffice.org/contrib/dictionaries/<br/>
 http://ftp.heanet.ie/mirrors/openoffice.org/contrib/dictionaries/<br/>
@@ -203,33 +194,28 @@ http://ftp.heanet.ie/mirrors/openoffice.org/contrib/dictionaries/<br/>
 http://freebsd.csie.nctu.edu.tw/distfiles/openoffice.org1.1/<br/>
 http://freebsd.csie.nctu.edu.tw/distfiles/openoffice.org1.1/<br/>
 http://planetmirror.com/pub/OpenOffice/contrib/dictionaries/<br/>
-http://planetmirror.com/pub/OpenOffice/contrib/dictionaries/<br/>
-http://ftp.riken.go.jp/pub/FreeBSD/distfiles/openoffice/<br/>
-http://ftp.riken.go.jp/pub/FreeBSD/distfiles/openoffice/<br/>
-http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
-http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
 </p>
 
 <h3>Installar nove dictionarios orthographic manualmente</h3>
 
-<p>In le fenestra de dialogo Optiones &gt; Controlo orthographic, selige o crea un plica /dictionarios sur tu disco dur.</p>
+<p>in le fenestra de dialogo Optiones &gt; Preferences &gt; Spellchecker, selige o crea un Plica del files dictionarios sur tu disco dur.</p>
 
 <p>Obtene le files .dic e .aff del dictionario que tu desidera usar, e pone los in iste plica.</p>
 
-<p>In ultra a esser disponibile ex le precedente depositos, dictionarios orthographic es disponibile como parte del  installationes de LibreOffice de OpenOffice.org. LibreOffice e le versiones plus recente de OpenOffice.org ora usa le formato de &quot;extensiones&quot; pro iste dictionarios, in le qual le files es supplite in un archivo zip con extension .oxt. Pro usar le dictionarios orthographic in iste formato, renomina le extension del file ab .oxt a .zip e, usante un application pro archivos zip (assi como WinZip), extrahe le files .dic e .aff.</p>
+<p>In ultra a esser disponibile ex le precedente repositorios, le dictionarios orthographic es disponibile como parte del installationes de LibreOffice de OpenOffice.org. LibreOffice e altere versiones plus recente de OpenOffice.org ora usa le formato "extensiones" pro iste dictionarios, in le qual le files es supplite in un archivo zip con le extension .oxt. Pro usar le dictionarios orthographic in iste formato, renomina le extension del file ab .oxt a .zip e, usante un application pro archivos zip (assi como WinZip), extrahe le files .dic e .aff.</p>
 
-<p>Le nomines del files debe exactemente corresponder al codice del lingua de tu lingua final como definite in le fenestra de dialogo Proprietates del projecto (Projecto &gt; Proprietates). Per exemplo, si tu ha seligite ES-MX (Mexican Spanish) como le lingua de destination, le files del dictionario debe esser nominate es_MX.dic e es_MX.aff. Si tu ha disponibile sol un dictionario boliviano espaniol, con le nomines del file es_BO.dic e es_BO.aff, tu debe renominar iste files in es_MX.dic e es_MX.aff, e le dictionario orthographic functionara. (Illo, naturalmente, controlara pro le boliviano plus tosto que pro le espaniol mexicano!)</p>
+<p>Le nomines del files debe exactemente corresponder al codice del lingua de tu lingua final como definite in le fenestra de dialogo Proprietates del projecto (Projecto &gt; Proprietates...). Per exemplo, si tu ha seligite ES-MX (Mexican Spanish) como lingua de destination, le files del dictionario debe esser nominate es_MX.dic e es_MX.aff. Si tu ha disponibile sol un dictionario boliviano espaniol, con le nomines del file es_BO.dic e es_BO.aff, tu debe renominar iste files in es_MX.dic e es_MX.aff, e le dictionario orthographic functionara. (Illo, naturalmente, controlara pro le boliviano plus tosto que pro le espaniol mexicano!)</p>
 
 <h3>Lista de controlo pro le chassa al defecto</h3>
 
 <p>Controla que le controlo orthographic es habilitate in le fenestra de dialogo del controlo orthographic.</p>
 
-<p>Si le processo de installation automatic non functiona: controla que tu connexion a Interrete es functionante; si assi, proba un URL de deposito differente. Controla que tu ha permissiones de scriber pro le plica del dictionarios orthographic que tu ha seligite.</p>
+<p>Si le processo de installation automatic non functiona: controla que tu connexion a Internet es functionante; si assi, proba un URL de repositorio differente. Controla que tu ha permissiones de scriber in le Plica del dictionarios orthographic que tu ha seligite.</p>
 
-<p>Controla que le files .dic e .aff pro tu lingua es presente in le plica del dictionarios orthographic, e que lor nomines corresponde al codice del lingua de destination.</p>
+<p>Controla que le files .dic e .aff pro tu lingua es presente in le plica del dictionarios orthographic, e que lor nomines corresponde exactemente al codice del lingua de destination.</p>
 
 
-<p>Copyright Marc Prior 2009-2011 </p>
+<p>Copyright Marc  2009-2011 </p>
 
 </div>
 
@@ -243,7 +229,7 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -260,22 +246,22 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
