--- a/fr/download.html
+++ b/fr/download.html
@@ -301,7 +301,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
 
 </table>
 
-<h3 id="latest">Version récente - OmegaT 4.1.2 update 2</h3>
+<h3 id="latest">Version récente - OmegaT 4.1.3</h3>
 
 <p>La version récente (ou « Latest ») est plus actuelle que la version standard et intègre de nouvelles fonctionnalités. Globalement, elle est relativement stable, mais elle peut comporter des bogues. D&#39;autre part, sa documentation est moins détaillée, en particulier les informations concernant les nouvelles fonctions. Les utilisateurs qui ont l&#39;habitude d&#39;OmegaT préfèrent souvent la dernière version.</p>
 
@@ -316,35 +316,35 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   <tbody><tr id="latest_windows_jre">
       <td class="version-name">Windows avec JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Windows.exe/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Windows.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_windows_jre64b">
       <td class="version-name">Windows avec JRE 64 bits</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Windows_64.exe/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Windows_64.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_windows_nojre">
       <td class="version-name">Windows sans JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Windows_without_JRE.exe/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Windows_without_JRE.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_osx_signed">
       <td class="version-name">OS X Signé</td>
       <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Mac_Signed.zip/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Mac_Signed.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_osx_unsigned">
       <td class="version-name">OS X Non signé</td>
       <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Mac.zip/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Mac.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_linux_jre64b">
       <td class="version-name">Linux avec JRE 64 bits</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Linux_64.tar.bz2/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Linux_64.tar.bz2/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_linux_jre">
       <td class="version-name">Linux avec JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Linux.tar.bz2/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Linux.tar.bz2/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_linux_nojre">
       <td class="version-name">Cross-platform sans JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Without_JRE.zip/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Without_JRE.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
@@ -352,7 +352,7 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   </tr><tr id="latest_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 2/OmegaT_4.1.2_02_Beta_Source.zip/download" role="button">Télécharger</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.3/OmegaT_4.1.3_Beta_Source.zip/download" role="button">Télécharger</a></td></td>
   </tr></tbody>
 
 </table>
