--- a/ia/404.html
+++ b/ia/404.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Page Not Found - OmegaT</title>
+  <title>Pagina non trovate - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ia/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.">
 
   <link rel="canonical" href="http://omegat.org/ia/404.html">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Page Not Found - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Pagina non trovate - OmegaT" />
+  <meta property="og:description" content="OmegaT es un programma gratuite pro memoria de traduction, scripte in Java." />
   <meta property="og:url"         content="http://omegat.org/ia/404.html" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - Le application gratuite pro memorias de traduction" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ia",
-    "headline": "Page Not Found",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Pagina non trovate",
+    "description": "OmegaT es un programma gratuite pro memoria de traduction, scripte in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ia/download">Discargar OmegaT</a></li>
+        <li><a href="/ia/download">Discargamento</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ia/resources">Altere ressources OmegaT</a></li>
+        <li><a href="/ia/resources">Ressources</a></li>
         <li><a href="/ia/documentation">Documentation</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Linguas<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,11 +167,11 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-404"><h1>Page Not Found</h1></div>
+    <div class="jumbotron jumbo-page titles-404"><h1>Pagina non trovate</h1></div>
         
     <div class="container">
-  <h2>Sorry</h2>
-  <p>We could not find the page you are looking for. You can go to the <a href="index.html">home page</a> and hopefully find the information you need from there.</p>
+  <h2>Nos regretta.</h2>
+  <p>Nos non pote trovar le pagina que tu recerca. Tu pote ir al <a href="index.html">pagina initial</a> e sperabilemente trovar, per illo, le informationes que tu necessita.</p>
 </div>
 
 
@@ -183,7 +183,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connecter</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -200,22 +200,22 @@
         <div class="footer-links">
           <ul>
             <li><a href="/ia/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Recensiones de OmegaT</a></li>
+            <li><a href="/ia/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Breve instructiones</a></li>
+            <li><a href="/ia/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guida</a></li>
+            <li><a href="/ia/reviews"><span class="glyphicon glyphicon-heart"></span> Revistas</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Le projecto OmegaT Projecto</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contacto e supporto</a>
+            <a href="/ia/contact"><span class="glyphicon glyphicon-envelope"></span> Contactos e supporto</a>
             </li>
             <li>
-            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> Qui es nos</a>
+            <a href="/ia/about"><span class="glyphicon glyphicon-question-sign"></span> A proposito</a>
             </li>
             <li>
             <a href="/ia/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophia</a>
